--- a/DADI/css/style.css
+++ b/DADI/css/style.css
@@ -4,3 +4,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    text-align: center;
+  }
+  
+  .dice-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 20PX;
+  }
+  
+  .dice {
+    font-size: 2em;
+    width: 150px;
+    height: 150px;
+    border: 2px solid black;
+    margin: 0 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+  }
+  
+  #result {
+    margin-top: 20px;
+    font-size: 2em;
+  }
+  
